sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:12: error: too many arguments for method getTaillePile: ()Int
      if(getTaillePile(i)<getTaillePile(i-1)){
                      ^BasicPancake:12: error: too many arguments for method getTaillePile: ()Int
      if(getTaillePile(i)<getTaillePile(i-1)){
                                       ^