sort.pancake.lessons.sort.pancake.BasicPancake.scala.code
def solve() {
  
  var trie = false;
  
  while(!trie){
    
    trie = true;
    
    for(i<- 1 to getTaillePile()-1){
      
      if(getTaillePile(i)<getTaillePile(i-1)){
        retourne(i);
        trie = false;
      }
      
    }
    
  }
  
}